hw7: fixes